skyzen-macros/tests/fixtures/openapi_missing_schema.stderr
warning: unused import: `linkme_impl::distributed_slice`
 --> tests/fixtures/openapi_missing_schema.rs:3:5
  |
3 | use linkme_impl::distributed_slice;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `MissingSchema: ExtractorOpenApiSchema` is not satisfied
   --> tests/fixtures/openapi_missing_schema.rs:127:20
    |
127 | fn handler(_param: MissingSchema) -> ResponseSchema {
    |                    ^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `PartialSchema` is not implemented for `MissingSchema`
   --> tests/fixtures/openapi_missing_schema.rs:116:1
    |
116 | struct MissingSchema;
    | ^^^^^^^^^^^^^^^^^^^^
    = help: the trait `PartialSchema` is implemented for `ResponseSchema`
note: required for `MissingSchema` to implement `ExtractorOpenApiSchema`
   --> tests/fixtures/openapi_missing_schema.rs:77:13
    |
 77 |     impl<T> ExtractorOpenApiSchema for T
    |             ^^^^^^^^^^^^^^^^^^^^^^     ^
 78 |     where
 79 |         T: PartialSchema,
    |            ------------- unsatisfied trait bound introduced here
note: required by a bound in `extractor_schema_of`
   --> tests/fixtures/openapi_missing_schema.rs:103:35
    |
103 |     pub fn extractor_schema_of<T: ExtractorOpenApiSchema>() -> Option<ExtractorSchema> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extractor_schema_of`
